terminated some links

--- a/Specialize-web-developers-online-coder-13-html-email-links.html
+++ b/Specialize-web-developers-online-coder-13-html-email-links.html
@@ -3,12 +3,12 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
-<title>#13HTML - Email Links: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<title>#13HTML - Email link-error.htmls: Try It</title>
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Email Links</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Email link-error.htmls</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -47,9 +47,9 @@
 <div class="row">
 <div class="offset-sm-2 col-sm-8">
 <div class="headerText text-center">
-<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML - Email Links</h2>
+<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML - Email link-error.htmls</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-It is not difficult to put an HTML email link on your webpage but it can cause unnecessary spamming problem for your email account. There are people, who can run programs to harvest these types of emails and later use them for spamming in various ways.
+It is not difficult to put an HTML email link-error.html on your webpage but it can cause unnecessary spamming problem for your email account. There are people, who can run programs to harvest these types of emails and later use them for spamming in various ways.
 
 <br/>
 You can have another option to facilitate people to send you emails. One option could be to use HTML forms to collect user data and then use PHP or CGI script to send an email.
@@ -80,7 +80,7 @@ along with <i>href</i> attribute. Following is the syntax of using <b>mailto</b>
 <i>You are recommended to create html file on your computer then run it directly on your browser, or otherwise it won't on our debugger</i>
 <br/>
 <br/>
-Now, if a user clicks this link, it launches one Email Client (like Lotus Notes, Outlook Express etc. ) 
+Now, if a user clicks this link-error.html, it launches one Email Client (like Lotus Notes, Outlook Express etc. ) 
 installed on your user's computer. There is another risk to use this option to send email because if user 
 do not have email client installed on their computer then it would not be possible to send email.
 </p>
@@ -176,11 +176,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
