--- a/Specialize-web-developers-online-coder-14-html-frames.html
+++ b/Specialize-web-developers-online-coder-14-html-frames.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>#14HTML - Frames: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Frames</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Frames</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -196,7 +196,7 @@ Following are the important attributes of &lt;frame&gt; tag −
 <td style="text-align:center;vertical-align:middle">2</td>
 <td>
 <p><b>name</b></p>
-<p>This attribute allows you to give a name to a frame. It is used to indicate which frame a document should be loaded into. This is especially important when you want to create links in one frame that load pages into an another frame, in which case the second frame needs a name to identify itself as the target of the link.</p></td>
+<p>This attribute allows you to give a name to a frame. It is used to indicate which frame a document should be loaded into. This is especially important when you want to create link-error.htmls in one frame that load pages into an another frame, in which case the second frame needs a name to identify itself as the target of the link-error.html.</p></td>
 </tr>
 <tr>
 <td style="text-align:center;vertical-align:middle">3</td>
@@ -232,7 +232,7 @@ Following are the important attributes of &lt;frame&gt; tag −
 <td style="text-align:center;vertical-align:middle">8</td>
 <td>
 <p><b>longdesc</b></p>
-<p>This attribute allows you to provide a link to another page containing a long description of the contents of the frame. For example longdesc = "framedescription.htm"</p></td>
+<p>This attribute allows you to provide a link-error.html to another page containing a long description of the contents of the frame. For example longdesc = "framedescription.htm"</p></td>
 </tr>
 </tbody></table>
 
@@ -308,8 +308,8 @@ Let's see following example where a test.htm file has following code −
 Here, we have created two columns to fill with two frames. The first frame is 200 pixels wide and will 
 contain the navigation menu bar implemented by <b>menu.htm</b> file. The second column fills in remaining 
 space and will contain the main part of the page and it is implemented by <b>main.htm</b> file. 
-For all the three links available in menu bar, we have mentioned target frame as <b>main_page</b>, 
-so whenever you click any of the links in menu bar, available link will open in main page.
+For all the three link-error.htmls available in menu bar, we have mentioned target frame as <b>main_page</b>, 
+so whenever you click any of the link-error.htmls in menu bar, available link-error.html will open in main page.
 <br/>
 Following is the content of menu.htm file
 </p>
@@ -366,8 +366,8 @@ Following is the content of main.htm file −
 <html>
 
    <body bgcolor = "#b5dcb3">
-      <h3>This is main page and content from any link will be displayed here.</h3>
-      <p>So now click any link and see the result.</p>
+      <h3>This is main page and content from any link-error.html will be displayed here.</h3>
+      <p>So now click any link-error.html and see the result.</p>
    </body>
 	
 </html>
@@ -383,7 +383,7 @@ Following is the content of main.htm file −
 <div class="headerText text-center">
 
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-Now you can try to click links available in the left panel and see the result. The <i>targetattribute</i> can also take one of the following values −
+Now you can try to click link-error.htmls available in the left panel and see the result. The <i>targetattribute</i> can also take one of the following values −
 <table class="table table-bordered" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 <tbody><tr class="table-header">
 <th>Sr.No</th>
@@ -506,11 +506,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
