--- a/Specialize-web-developers-online-coder-18-html-colors.html
+++ b/Specialize-web-developers-online-coder-18-html-colors.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>#18HTML - Colors: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Colors</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Colors</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -55,9 +55,9 @@ The &lt;body&gt; tag has following attributes which can be used to set different
 <ul class="list">
 <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>bgcolor</b> − sets a color for the background of the page.</p></li>
 <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>text</b> − sets a color for the body text.</p></li>
-<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>alink</b> − sets a color for active links or selected links.</p></li>
-<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>link</b> − sets a color for linked text.</p></li>
-<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>vlink</b> − sets a color for <i>visited links</i> − that is, for linked text that you have already clicked on.</p></li>
+<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>alink-error.html</b> − sets a color for active link-error.htmls or selected link-error.htmls.</p></li>
+<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>link-error.html</b> − sets a color for link-error.htmled text.</p></li>
+<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>vlink-error.html</b> − sets a color for <i>visited link-error.htmls</i> − that is, for link-error.htmled text that you have already clicked on.</p></li>
 </ul>
  </p>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML Color Coding Methods</h2>
@@ -754,11 +754,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
