--- a/Specialize-web-developers-online-coder-23-html-headers.html
+++ b/Specialize-web-developers-online-coder-23-html-headers.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>#23HTML - Header: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Header</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Header</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -86,7 +86,7 @@ Document declaration tag
 <div class="headerText text-center">
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 This chapter will give a little more detail about header part which is represented by HTML &lt;head&gt; tag. The &lt;head&gt; tag is a container of various
- important tags like &lt;title&gt;, &lt;meta&gt;, &lt;link&gt;, &lt;base&gt;, &lt;style&gt;, &lt;script&gt;, and &lt;noscript&gt; tags.
+ important tags like &lt;title&gt;, &lt;meta&gt;, &lt;link-error.html&gt;, &lt;base&gt;, &lt;style&gt;, &lt;script&gt;, and &lt;noscript&gt; tags.
 </p>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">The HTML &lt;title&gt; Tag</h2>
 
@@ -238,12 +238,12 @@ For example, all the given pages and images will be searched after prefixing the
 
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 But if you change base URL to something else, for example, if base URL is http://www.tutorialspoint.com/home 
-then image and other given links will become like http://www.tutorialspoint.com/home/images/logo.png and http://www.tutorialspoint.com/html/index.htm
+then image and other given link-error.htmls will become like http://www.tutorialspoint.com/home/images/logo.png and http://www.tutorialspoint.com/html/index.htm
 </p>
-<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">The HTML &lt;link&gt; Tag</h2>
+<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">The HTML &lt;link-error.html&gt; Tag</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-The HTML &lt;link&gt; tag is used to specify relationships between the current document and external resource. 
-Following is an example to link an external style sheet file available in <b>css</b> sub-directory within web root −
+The HTML &lt;link-error.html&gt; tag is used to specify relationships between the current document and external resource. 
+Following is an example to link-error.html an external style sheet file available in <b>css</b> sub-directory within web root −
 </p>
 </div>
 </div>
@@ -260,9 +260,9 @@ Following is an example to link an external style sheet file available in <b>css
 <html>
 
    <head>
-      <title>HTML link Tag Example</title>
+      <title>HTML link-error.html Tag Example</title>
       <base href = "https://www.tutorialspoint.com/" />
-      <link rel = "stylesheet" type = "text/css" href = "/css/style.css">
+      <link-error.html rel = "stylesheet" type = "text/css" href = "/css/style.css">
    </head>
 	
    <body>
@@ -461,11 +461,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
