--- a/Specialize-web-developers-online-coder-24-html-style-sheet.html
+++ b/Specialize-web-developers-online-coder-24-html-style-sheet.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>#24HTML - Style Sheet: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Style Sheet</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Style Sheet</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -139,7 +139,7 @@ We can re-write above example with the help of Style Sheet as follows −
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 You can use CSS in three ways in your HTML document −
 <ul class="list">
-<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>External Style Sheet</b> − Define style sheet rules in a separate .css file and then include that file in your HTML document using HTML &lt;link&gt; tag.</p></li>
+<li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>External Style Sheet</b> − Define style sheet rules in a separate .css file and then include that file in your HTML document using HTML &lt;link-error.html&gt; tag.</p></li>
 <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>Internal Style Sheet</b> − Define style sheet rules in header section of the HTML document using &lt;style&gt; tag.</p></li>
 <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>Inline Style Sheet</b> − Define style sheet rules directly along-with the HTML elements using <b>style</b> attribute.</p></li>
 </ul>
@@ -149,7 +149,7 @@ Let's see all the three cases one by one with the help of suitable examples.
 </p>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">External Style Sheet</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-If you need to use your style sheet to various pages, then its always recommended to define a common style sheet in a separate file. A cascading style sheet file will have extension as <b>.css</b> and it will be included in HTML files using &lt;link&gt; tag.
+If you need to use your style sheet to various pages, then its always recommended to define a common style sheet in a separate file. A cascading style sheet file will have extension as <b>.css</b> and it will be included in HTML files using &lt;link-error.html&gt; tag.
 <br/>
 Example
 <br/>
@@ -187,7 +187,7 @@ Now let's make use of the above external CSS file in our following HTML document
 
    <head>
       <title>HTML External CSS</title>
-      <link rel = "stylesheet" type = "text/css" href = "/html/style.css">
+      <link-error.html rel = "stylesheet" type = "text/css" href = "/html/style.css">
    </head>
 
    <body>
@@ -390,11 +390,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
