--- a/Specialize-web-developers-online-coder-36-html-events-references.html
+++ b/Specialize-web-developers-online-coder-36-html-events-references.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>#37HTML - Events References: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Events References</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Events References</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -49,7 +49,7 @@
 <div class="headerText text-center">
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML - Events Reference</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-When a user visit your website, they do things like click on text and images and given links, hover over things etc. These are examples of what JavaScript calls events.
+When a user visit your website, they do things like click on text and images and given link-error.htmls, hover over things etc. These are examples of what JavaScript calls events.
 <br/>
 We can write our event handlers in Javascript or vbscript and can specify these event handlers as a value of event tag attribute. The HTML 4.01 specification defines 19 event attributes as listed below −
 </p>
@@ -278,11 +278,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
