--- a/category-desktop-support-operating-systems.html
+++ b/category-desktop-support-operating-systems.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>	Desktop Support - Operating Systems</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="category-desktop-support-utility-tools.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="category-desktop-support-utility-tools.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">Download Center</a>
+        <a class="nav-link-error.html" href="#categories">Download Center</a>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -152,7 +152,7 @@ Windows 10 PRO x86/x64 ISO:
 Windows 8.1 is a personal computer operating system that was produced by Microsoft and released as part of the Windows NT family of operating systems. It was released to manufacturing on August 27, 2013, and reached general availability on October 17, 2013, about a year after the retail release of its predecessor.
 <br/><br/>
 <b>Windows 8.1 PRO</b></br>
-Get the Final Version of Microsoft Windows 8.1 Pro ISO Download. Free direct link by Softlay. Download ISO file without Media Creation Tool or Windows 8 Product key. Untouched full version ISO 64-bit.
+Get the Final Version of Microsoft Windows 8.1 Pro ISO Download. Free direct link-error.html by Softlay. Download ISO file without Media Creation Tool or Windows 8 Product key. Untouched full version ISO 64-bit.
 <br/><br/>
 Windows 8 users can free upgrade to Windows 8.1 full version without going to the Windows Store. You can download Windows 8.1 ISO (DVD) From MSDN with the Windows 8 product key. Download Windows 8.1 Pro ISO from their Official Microsoft website.
 <br/><br/> 
@@ -565,7 +565,7 @@ macOS Mojave is the fifteenth major release of macOS, Apple Inc.'s desktop opera
 
 <b>Full offline installer</b><br/>
 
-You can create a bootable image either on the USB or as an ISO from this DMG file. At the time of this writing, Apple has released MacOS Mojave 10.14.1 stable. That’s why we have given the direct download links for the latest version. The beta version of 10.14.2 which is not recommended to be installed on a production PC as it may contain bugs. We will update you when a new version of Mac OS is available for download. Just keep following us and give your feedback in the comments below.
+You can create a bootable image either on the USB or as an ISO from this DMG file. At the time of this writing, Apple has released MacOS Mojave 10.14.1 stable. That’s why we have given the direct download link-error.htmls for the latest version. The beta version of 10.14.2 which is not recommended to be installed on a production PC as it may contain bugs. We will update you when a new version of Mac OS is available for download. Just keep following us and give your feedback in the comments below.
 
 <br/></br>
 <b>Begin downloading</b><br/>
@@ -641,7 +641,7 @@ Android Oreo ISO:
 </div>
 </div>
 <br/>
-<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link in the form below.</p></center>
+<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link-error.html in the form below.</p></center>
 
 
 </span>
@@ -745,11 +745,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
