--- a/category-desktop-support-os-drivers.html
+++ b/category-desktop-support-os-drivers.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>	Desktop Support - Drivers</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="category-desktop-support-os-drivers.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="category-desktop-support-os-drivers.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">Download Center</a>
+        <a class="nav-link-error.html" href="#categories">Download Center</a>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -169,7 +169,7 @@ File size: 41.4MB <a href="https://mega.nz/#!EMoQBKpJ!GIy4ukJanaa4yimq2UtY21YU-T
 - Intel<br/>
 - IVT<br/>
 - Logitech<br/>
-- Ralink<br/>
+- Ralink-error.html<br/>
 - Realtek<br/>
 - Toshiba<br/>
 <b>Begin downloading</b><br/>
@@ -509,7 +509,7 @@ DP_MassStorage_13033.7z
 - ASIX<br/>
 - Broadcom<br/>
 - Compal<br/>
-- DisplayLink<br/>
+- Displaylink-error.html<br/>
 - ENE<br/>
 - Fintek<br/>
 - Foxconn<br/>
@@ -1344,7 +1344,7 @@ DP_Sounds_Realtek_13022.7z
 - Dekart<br/>
 - DreamBox<br/>
 - Ericsson<br/>
-- Foxlink<br/>
+- Foxlink-error.html<br/>
 - Garmin<br/>
 - INNOMTEK<br/>
 - IrDA<br/>
@@ -1989,8 +1989,8 @@ DP_Video_Others_13032.7z
 - Bison<br/>
 - Chicony<br/>
 - Creative<br/>
-- CyberLink<br/>
-- D-Link<br/>
+- Cyberlink-error.html<br/>
+- D-link-error.html<br/>
 - D-Max<br/>
 - EasyCamera<br/>
 - FJWebCam<br/>
@@ -2063,12 +2063,12 @@ DP_WebCam_13033.7z
 - Ericsson<br/>
 - Huawei<br/>
 - Intel<br/>
-- Linksys<br/>
+- link-error.htmlsys<br/>
 - Marvell<br/>
 - Netgear<br/>
 - Novatel<br/>
 - Qualcomm<br/>
-- Ralink<br/>
+- Ralink-error.html<br/>
 - Realtek<br/>
 - Sierra<br/>
 - SIS<br/>
@@ -2188,7 +2188,7 @@ DP_xUSB_13033.7z
 
 </div>
 <br/><br/>
-<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link in the form below.</p></center>
+<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link-error.html in the form below.</p></center>
 
 
 
@@ -2319,11 +2319,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
