--- a/category-desktop-support-utility-tools.html
+++ b/category-desktop-support-utility-tools.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>	Desktop Support - Utilities</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="category-desktop-support-utility-tools.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="category-desktop-support-utility-tools.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">Download Center</a>
+        <a class="nav-link-error.html" href="#categories">Download Center</a>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -156,7 +156,7 @@ Windows 10 PRO x86/x64 ISO:
 Windows 8.1 is a personal computer operating system that was produced by Microsoft and released as part of the Windows NT family of operating systems. It was released to manufacturing on August 27, 2013, and reached general availability on October 17, 2013, about a year after the retail release of its predecessor.
 <br/><br/>
 <b>Windows 8.1 PRO</b></br>
-Get the Final Version of Microsoft Windows 8.1 Pro ISO Download. Free direct link by Softlay. Download ISO file without Media Creation Tool or Windows 8 Product key. Untouched full version ISO 64-bit.
+Get the Final Version of Microsoft Windows 8.1 Pro ISO Download. Free direct link-error.html by Softlay. Download ISO file without Media Creation Tool or Windows 8 Product key. Untouched full version ISO 64-bit.
 <br/><br/>
 Windows 8 users can free upgrade to Windows 8.1 full version without going to the Windows Store. You can download Windows 8.1 ISO (DVD) From MSDN with the Windows 8 product key. Download Windows 8.1 Pro ISO from their Official Microsoft website.
 <br/><br/> 
@@ -569,7 +569,7 @@ macOS Mojave is the fifteenth major release of macOS, Apple Inc.'s desktop opera
 
 <b>Full offline installer</b><br/>
 
-You can create a bootable image either on the USB or as an ISO from this DMG file. At the time of this writing, Apple has released MacOS Mojave 10.14.1 stable. That’s why we have given the direct download links for the latest version. The beta version of 10.14.2 which is not recommended to be installed on a production PC as it may contain bugs. We will update you when a new version of Mac OS is available for download. Just keep following us and give your feedback in the comments below.
+You can create a bootable image either on the USB or as an ISO from this DMG file. At the time of this writing, Apple has released MacOS Mojave 10.14.1 stable. That’s why we have given the direct download link-error.htmls for the latest version. The beta version of 10.14.2 which is not recommended to be installed on a production PC as it may contain bugs. We will update you when a new version of Mac OS is available for download. Just keep following us and give your feedback in the comments below.
 
 <br/></br>
 <b>Begin downloading</b><br/>
@@ -645,7 +645,7 @@ Android Oreo ISO:
 </div>
 </div>
 <br/>
-<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link in the form below.</p></center>
+<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link-error.html in the form below.</p></center>
 
 
 </span>
@@ -1400,7 +1400,7 @@ Since the browser was originally built for mobile devices, there is also a minia
  It has an advert-blocking function
 <br/><br/>
 
-	<b>Direct Link for UC Browser</b><br/>
+	<b>Direct link-error.html for UC Browser</b><br/>
 	Download UC Browser 32bit/64bit: <br/>
 	File size: 41.53MB <a href="http://umcdnpc.ucweb.com/down/i18n/35151/4601/UCBrowser_V7.0.185.1002_4601_(Build1801021540)_(en-us).exe" target="_blank"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
 	
@@ -1466,7 +1466,7 @@ CSS rendering and 2D graphics load faster, while scrolling is smoother. HTML5 me
 - HTML5 offline support
 <br/><br/>
 
-	<b>Direct Link for Safari</b><br/>
+	<b>Direct link-error.html for Safari</b><br/>
 	Download Safari Browser 32bit/64bit: <BR/>
 	File size: 36.71 MB <a href="http://delivery.filecroco.com/kits_4/SafariSetup.exe" target="_blank"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
 	
@@ -1543,9 +1543,9 @@ Adobe Bundle include:
 - <B>Acrobat XI Pro</B> - Word Processing<br/>
 - <B>Media Encoder</B> -  encoding video files to the proper formats<br/><br/>
 
-	<b>Direct Link for Adobe Bundle</b><br/>
+	<b>Direct link-error.html for Adobe Bundle</b><br/>
 	Go to my database: <a href="https://programmes.leliene.eu/" target="_blank">
-	<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="external-link-alt" class="svg-inline--fa fa-external-link-alt fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"></path></svg>
+	<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="external-link-error.html-alt" class="svg-inline--fa fa-external-link-error.html-alt fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"></path></svg>
 	
 	
 	
@@ -1893,11 +1893,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
