--- a/link-error.html
+++ b/link-error.html
@@ -3,11 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
-<title>#22HTML - Marquees: Try It</title>
+<title>Let's Connect</title>
 <link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
  <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="stylesheet" href="link-error.html-error.css">
 <link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
@@ -15,7 +15,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 <div class="container">
-  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a>
+  <a class="navbar-brand" href="https://theevilgeniux.github.io/"><img src="images/logo.png" class="logo"></a><span class="logoname">GENIUX</span>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,12 +23,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link-error.html" href="#categories">HTML - Marquees</a>
+        <a class="nav-link-error.html" href="#categories">Dashboard</a>
       </li>
-	   <li class="nav-item">
+	        <li class="nav-item">
         <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
@@ -40,271 +40,86 @@
   </div>
 </nav>
 </header>
-<iframe src="https://codepen.io/pen/" class="onlinecompiler">
-</iframe>
+<div class="jumbotron jumbotron-fluid height100p banner" id="home">
+  <div class="container h100">
+  <div class="contentBox h100">
+  <div>
+  <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">404 Error</h1>
+  <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"> link-error.html is been terminated, I'm currently resolving the issue. For further Information visit any of my Platforms below. </i></p>
+    </div>
+</div>
+</div>
+</div>
 <section class="sec1" id="categories">
 <div class="container">
+<div class="headerText text-center">
+<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Platforms</h2>
+<p class="paragraph" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Connect with me on <b>link-error.htmledIn.</b> Share Ideas on my <b>Chat Room</b>. Like my <b>Page</b> and stay updated.</p></center>
+
+</div>
 <div class="row">
 <div class="offset-sm-2 col-sm-8">
-<div class="headerText text-center">
-<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML - Marquees</h2>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-An HTML marquee is a scrolling piece of text displayed either horizontally across or vertically down your webpage depending on the settings. This is created by using HTML &lt;marquees&gt; tag.
-<br/>
-<blockquote data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0"><p><b>Note</b> − The &lt;marquee&gt; tag deprecated in HTML5. Do not use this element, instead you can use JavaScript and CSS to create such effects.</p></blockquote>
- </p>
-<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Syntax</h2>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-A simple syntax to use HTML &lt;marquee&gt; tag is as follows −
-<textarea disabled="" class="textareaUL2">
-<marquee attribute_name = "attribute_value"....more attributes>
-One or more lines or text message or image
-</marquee>
-</textarea>
-</p>
 
-<h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">The &lt;marquee&gt; Tag Attributes</h2>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-Following is the list of important attributes which can be used with &lt;marquee&gt; tag.
-<table class="table table-bordered" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-<tbody><tr class="table-header">
-<th>Sr.No</th>
-<th style="text-align:center;">Attribute &amp; Description</th>
-</tr>
-<tr>
-<td class="ts">1</td>
-<td>
-<p><b>width</b></p>
-<p>This specifies the width of the marquee. This can be a value like 10 or 20% etc.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">2</td>
-<td>
-<p><b>height</b></p>
-<p>This specifies the height of the marquee. This can be a value like 10 or 20% etc.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">3</td>
-<td>
-<p><b>direction</b></p>
-<p>This specifies the direction in which marquee should scroll. This can be a value like <i>up, down, left</i> or <i>right</i>.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">4</td>
-<td>
-<p><b>behavior</b></p>
-<p>This specifies the type of scrolling of the marquee. This can have a value like <i>scroll, slide</i> and <i>alternate</i>.</p></td>
-</tr>
-<tr>
-<td class="ts">5</td>
-<td>
-<p><b>scrolldelay</b></p>
-<p>This specifies how long to delay between each jump. This will have a value like 10 etc.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">6</td>
-<td>
-<p><b>scrollamount</b></p>
-<p>This specifies the speed of marquee text. This can have a value like 10 etc.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">7</td>
-<td>
-<p><b>loop</b></p>
-<p>This specifies how many times to loop. The default value is INFINITE, which means that the marquee loops endlessly.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">8</td>
-<td>
-<p><b>bgcolor</b></p>
-<p>This specifies background color in terms of color name or color hex value.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">9</td>
-<td>
-<p><b>hspace</b></p>
-<p>This specifies horizontal space around the marquee. This can be a value like 10 or 20% etc.</p>
-</td>
-</tr>
-<tr>
-<td class="ts">10</td>
-<td>
-<p><b>vspace</b></p>
-<p>This specifies vertical space around the marquee. This can be a value like 10 or 20% etc.</p>
-</td>
-</tr>
-</tbody></table>
-</p>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-Below are few examples to demonstrate the usage of marquee tag.
-<br/>
-<b>Example 1</b>
-</p>
-</div>
 </div>
 </div>
 
 
+
+<div class="row">
 <div class="col-sm-4">
-<p class="caption" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML</p>
 <div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="imgBx">
+<img src="images/icons/link-error.htmled_in_alt.png" class="img-fluid">
+</div>
 <div class="content">
-<h3>	
-<!--HMTL Section-->
-<textarea disabled class="codes">
-<!DOCTYPE html>
-<html>
-
-   <head>
-      <title>HTML marquee Tag</title>
-   </head>
-	
-   <body>
-      <marquee>This is basic example of marquee</marquee>
-   </body>
-	
-</html>
-</textarea>
-</h3>
+<h3>link-error.htmledIn<br><span><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" class="specializes-url" target="_blank">myProfile</a></span></h3>
 </div>
-</div>
-<br/>
-</div>
-<br/>
-<div class="offset-sm-2 col-sm-8">
-<div class="headerText text-center">
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-<b>Examples - 2</b>
-</p>
-</div>
-</div>
-
-
-<div class="col-sm-4">
-<p class="caption" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML</p>
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-<div class="content">
-<h3>	
-<!--HMTL Section-->
-<textarea disabled class="codes">
-<!DOCTYPE html>
-<html>
-
-   <head>
-      <title>HTML marquee Tag</title>
-   </head>
-	
-   <body>
-      <marquee width = "50%">This example will take only 50% width</marquee>
-   </body>
-	
-</html>
-</textarea>
-</h3>
-</div>
-</div>
-<br/>
-</div>
-<br/>
-
-
-
-
-
-
-
-<div class="offset-sm-2 col-sm-8">
-<div class="headerText text-center">
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-<b>Examples - 3</b>
-</p>
 </div>
 </div>
 
 <div class="col-sm-4">
-<p class="caption" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML</p>
-<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="imgBx">
+<img src="images/icons/Group-icon.png" class="img-fluid">
+</div>
 <div class="content">
-<h3>	
-<!--HMTL Section-->
-<textarea disabled class="codes">
-<!DOCTYPE html>
-<html>
-
-   <head>
-      <title>HTML marquee Tag</title>
-   </head>
-
-   <body>
-      <marquee direction = "right">This text will scroll from left to right</marquee>
-   </body>
-	
-</html>
-</textarea>
-</h3>
+<h3>Chat Room<br><span><a href="https://www.facebook.com/groups/theevilgeniux/" target="_blank">Facebook Group</a></span></h3>
 </div>
 </div>
-<br/>
 </div>
 
-<div class="offset-sm-2 col-sm-8">
-<div class="headerText text-center">
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-<b>Examples - 4</b>
-</p>
-</p>
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
+<div class="imgBx">
+<img src="images/icons/facebook-like-icon-png-transparent-background-5.png" class="img-fluid">
+</div>
+<div class="content">
+<h3>Facebook<br><span><a href="https://fb.me/theevilgeniux.0" target="_blank">Follow my page</a></span></h3>
+</div>
 </div>
 </div>
 <div class="col-sm-4">
-<p class="caption" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">HTML</p>
 <div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="imgBx">
+<img src="images/icons/Github-icon.png" class="img-fluid">
+</div>
 <div class="content">
-<h3>	
-<!--HMTL Section-->
-<textarea disabled class="codes">
-<!DOCTYPE html>
-<html>
-
-   <head>
-      <title>HTML marquee Tag</title>
-   </head>
-	
-   <body>
-      <marquee direction = "up">This text will scroll from bottom to up</marquee>
-   </body>
-	
-</html>
-</textarea>
-</h3>
+<h3>GitHub<br><span><a href="https://github.com/theevilgeniux" class="specializes-url" target="_blank">Geniux</a></span></h3>
+</div>
+</div>
+</div>
+<div class="col-sm-4">
+<div class="placeBox" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
+<div class="imgBx">
+<img src="images/icons/youtube-subscribe-me.png" class="img-fluid">
+</div>
+<div class="content">
+<h3>Youtube Channel<br><span><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" class="specializes-url" target="_blank">Subscribe</a></span></h3>
+</div>
 </div>
 </div>
 </div>
 <br/>
-<div class="offset-sm-2 col-sm-8">
-<div class="headerText text-center">
-
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-<i>Don't forget to try these codes on the debugger before proceeding to next page</i>
- </p>
- 
-</div>
-</div>
-
-
-
-
-
-
-</div>
-<center><button onclick="window.location.href = 'Specialize-web-developers-online-coder-23-html-headers.html';" class="btn btnD1" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Next Page</button></center>
-
 </section>
 <section class="sec2" id="me">
 <div class="container h100">
@@ -316,6 +131,7 @@ My name is Evidence Maphutha, Young Aspirant UI & UX Designer/Developer, as well
 Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
+
 <span id="dots">...</span><span id="more">
 specialize in systems development majoring in building and maintaining modern systems. 
 This is simply because I believe that ICT infrastructure maintance is an important 
@@ -334,12 +150,12 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="col-sm-12">
 <div class="headerText text-center">
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">Contact me</h2>
-<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">If you have a specific question or suggestion for Geniux.</p>
+<p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">If you have a specific question or suggestion for Geniux.</p>
 </div>
 </div>
 </div>
 <div class="row clearfix">
-<div class="offset-sm-2 col-sm-8" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+<div class="offset-sm-2 col-sm-8" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
 <form>
 <div class="form-group">
 <label>Name</label>
@@ -397,6 +213,7 @@ $('.navbar').toggleClass('scrolled', $(this).scrollTop() > $('.navbar').height()
 });
 
 </script>
+
 <script>
 function myFunction() {
   var dots = document.getElementById("dots");
@@ -413,7 +230,22 @@ function myFunction() {
     moreText.style.display = "inline";
   }
 }
+function myFunctionq() {
+  var dotsq = document.getElementById("dotsq");
+  var moreText = document.getElementById("moreq");
+  var btnText = document.getElementById("myBtnq");
 
+  if (dotsq.style.display === "none") {
+    dotsq.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dotsq.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
 </script>
 </body>
+
 </html>
