--- a/Specialize-web-developers-online-coder-27-html-references.html
+++ b/Specialize-web-developers-online-coder-27-html-references.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>#27HTML - Tag Reference: Try It</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="webdevelopers-online-coder-html.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="webdevelopers-online-coder-html.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">HTML - Tag Reference</a>
+        <a class="nav-link-error.html" href="#categories">HTML - Tag Reference</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -118,7 +118,7 @@ Following tags have been introduced in older versions of HTML but all the tags m
 </tr>
 <tr>
 <td><a href="/html/html_base_tag.htm">&lt;base&gt;</a></td>
-<td>Specifies a base URL for all the links in a page</td>
+<td>Specifies a base URL for all the link-error.htmls in a page</td>
 <td></td>
 </tr>
 <tr>
@@ -147,8 +147,8 @@ Following tags have been introduced in older versions of HTML but all the tags m
 <td></td>
 </tr>
 <tr>
-<td><a href="/html/html_blink_tag.htm">&lt;blink&gt;</a></td>
-<td>Specifies a text which blinks</td>
+<td><a href="/html/html_blink-error.html_tag.htm">&lt;blink-error.html&gt;</a></td>
+<td>Specifies a text which blink-error.htmls</td>
 <td></td>
 </tr>
 <tr>
@@ -397,7 +397,7 @@ Following tags have been introduced in older versions of HTML but all the tags m
 <td></td>
 </tr>
 <tr>
-<td><a href="/html/html_link_tag.htm">&lt;link&gt;</a></td>
+<td><a href="/html/html_link-error.html_tag.htm">&lt;link-error.html&gt;</a></td>
 <td>Specifies a resource reference</td>
 <td></td>
 </tr>
@@ -448,7 +448,7 @@ Following tags have been introduced in older versions of HTML but all the tags m
 </tr>
 <tr>
 <td style="vertical-align:middle"><a href="/html/html_nav_tag.htm">&lt;nav&gt;</a></td>
-<td>Specifies a section that contains only navigation links</td>
+<td>Specifies a section that contains only navigation link-error.htmls</td>
 <td><img src="images/html5_icon.png" alt="HTML-5"></td>
 </tr>
 <tr>
@@ -790,11 +790,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
