--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>Mobile Tech - Utilities</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="category-mobile-tech-support-utility-tools.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="category-mobile-tech-support-utility-tools.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">Download Center</a>
+        <a class="nav-link-error.html" href="#categories">Download Center</a>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -93,7 +93,7 @@
 	<div class="modal-body">
 	<img src="images/icons/generic-Android-app-icon-384x384.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">Google Account Managers</p>
-    <p class="modal-p"><BR/>Direct Links<BR/><br/>
+    <p class="modal-p"><BR/>Direct link-error.htmls<BR/><br/>
 	
 	Android Versions:<br/>
 	<b>⇒</b> Oreo 8.X.X  [DOWNLOAD]<a href="https://techeligible.com/Download/Google-Account-Manager-8.1.apk" target="_blank">
@@ -160,7 +160,7 @@
 	<div class="modal-body">
 	<img src="images/icons/FRP BypaSS-EvilGeniuS.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">FRP Bypass APKs</p>
-    <p class="modal-p"><BR/>Direct Links<BR/><br/>
+    <p class="modal-p"><BR/>Direct link-error.htmls<BR/><br/>
 	
 	
 	<b>⇒</b> Quick Shortcut Maker 2.4.0 [DOWNLOAD]<a href="https://techeligible.com/Download/Quick%20Shortcut%20Maker%202.4.0.apk" target="_blank">
@@ -351,7 +351,7 @@
 	<div class="modal-body">
 	<img src="images/icons/tech-clipart-computer-repair-shop-792390-173552.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">PC FRP Tools</p>
-    <p class="modal-p"><BR/>Direct Links<BR/><br/>
+    <p class="modal-p"><BR/>Direct link-error.htmls<BR/><br/>
 	
 	
 	<b>⇒</b> FRP HiJacker V1.0 [DOWNLOAD]<a href="https://mega.nz/#!VV5SVYqa!oXlbZ6MXi7Q-SnPHjU4R8_J7Gq34eJbUvqIbueIqSPw" target="_blank">
@@ -748,7 +748,7 @@ RootXplore Modded 4.2.1 APK: <b>3.7MB</b> <br/>
 
 </div>
 <br/><br/>
-<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link in the form below.</p></center>
+<center><p class="softwarescategories" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Report any broken link-error.html in the form below.</p></center>
 
 
 </span>
@@ -833,11 +833,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
