--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>Desktop Support - Tips and Tricks</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="category-windows-tricks-and-tips.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="category-windows-tricks-and-tips.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">Dashboard</a>
+        <a class="nav-link-error.html" href="#categories">Dashboard</a>
       </li>
 	   <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -186,7 +186,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <b>></b> On the other hand, since Windows 95/98/ME, Windows NT4, Windows 2000, Windows 2003 32-bit, or Windows XP 32-bit version does not support GPT partitions, a GPT disk will display as GPT protective partition in these systems, thus you could not access the data until you convert it back to MBR disk. In such situation, you have nothing to do but to convert  GPT to MBR disk. 
 	<br/><br/>
 	You need <b>Aomei Assistant Partition</b> in order to Convert it.<br/>
-	Download Link: <a href="https://mega.nz/#!QMp1DCzZ!vqXrJiXzYrXYy1AdTqg7Jk0odlwxq-5kn8fQrQiSl_8"><svg aria-hidden="true" focusable="false" 
+	Download link-error.html: <a href="https://mega.nz/#!QMp1DCzZ!vqXrJiXzYrXYy1AdTqg7Jk0odlwxq-5kn8fQrQiSl_8"><svg aria-hidden="true" focusable="false" 
 	data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 	<path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path>
 	</svg></a>
@@ -425,7 +425,7 @@ So if You want to Update Latest Intel HD Graphics Driver in Windows 7,8,10 Use n
 ....................................................................................
 <br/></br>
 2. How to Update Intel HD Graphics Driver in Windows 10.
-Use the link mentioned above (Intel Application). Install and Launch it.
+Use the link-error.html mentioned above (Intel Application). Install and Launch it.
 it will open a new tab in the browser and start scanning Your Computer/PC/Laptop for installed Intel Products.
 Check if any Driver update is available for any Intel Product including Intel HD Graphics Card. Click to expand. Click Download. And once the download is completed then click install.
 This will install the latest Intel HD Graphics Card Driver in Windows 7,8,10. 
@@ -535,7 +535,7 @@ So if You want to Update Latest Intel HD Graphics Driver in Windows 7,8,10 Use n
 ....................................................................................
 <br/></br>
 2. How to Update Intel HD Graphics Driver in Windows 10.
-Use the link mentioned above (Intel Application). Install and Launch it.
+Use the link-error.html mentioned above (Intel Application). Install and Launch it.
 it will open a new tab in the browser and start scanning Your Computer/PC/Laptop for installed Intel Products.
 Check if any Driver update is available for any Intel Product including Intel HD Graphics Card. Click to expand. Click Download. And once the download is completed then click install.
 This will install the latest Intel HD Graphics Card Driver in Windows 7,8,10. 
@@ -831,11 +831,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
