--- a/specialize-web-developers-html-learn-hub-dashboard.html
+++ b/specialize-web-developers-html-learn-hub-dashboard.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
 <title>Beginners: Web Developement</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-<link rel="stylesheet" href="specialize-web-developers-html-learn-hub-dashboard.css">
-<link rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
+<link-error.html rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link-error.html href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+ <link-error.html rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+<link-error.html rel="stylesheet" href="specialize-web-developers-html-learn-hub-dashboard.css">
+<link-error.html rel="shortcut icon" type="image/x-icon" href="images/tabicon.png" />
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -23,17 +23,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-lg-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link-error.html" href="https://theevilgeniux.github.io/">Home <span class="sr-only">(current)</span></a>
       </li>
 	  <li class="nav-item">
-        <a class="nav-link" href="#categories">Dashboard</a>
+        <a class="nav-link-error.html" href="#categories">Dashboard</a>
       </li>
 	        <li class="nav-item">
-        <a class="nav-link" href="#me">About me</a>
+        <a class="nav-link-error.html" href="#me">About me</a>
       </li>
 	  
 	   <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link-error.html" href="#contact">Contact</a>
       </li>
     </ul>
   </div>
@@ -191,7 +191,7 @@
 <img src="images/icons/html-css-js.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Text Links<br><span><a href="Specialize-web-developers-online-coder-11-html-text-links.html">Tutorial 11</a></span></h3>
+<h3>Text link-error.htmls<br><span><a href="Specialize-web-developers-online-coder-11-html-text-link-error.htmls.html">Tutorial 11</a></span></h3>
 </div>
 </div>
 </div>
@@ -204,7 +204,7 @@
 <img src="images/icons/html-css-js.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Image Links<br><span><a href="Specialize-web-developers-online-coder-12-html-image-links.html" class="specializes-url">Tutorial 12</a></span></h3>
+<h3>Image link-error.htmls<br><span><a href="Specialize-web-developers-online-coder-12-html-image-link-error.htmls.html" class="specializes-url">Tutorial 12</a></span></h3>
 </div>
 </div>
 </div>
@@ -215,7 +215,7 @@
 <img src="images/icons/html-css-js.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Email Links<br><span><a href="Specialize-web-developers-online-coder-13-html-email-links.html">Tutorial 13</a></span></h3>
+<h3>Email link-error.htmls<br><span><a href="Specialize-web-developers-online-coder-13-html-email-link-error.htmls.html">Tutorial 13</a></span></h3>
 </div>
 </div>
 </div>
@@ -447,11 +447,11 @@ I created this Website to share solutions, tips and tricks to overcome issues yo
 <div class="row">
 <div class="col-sm-12">
 <ul class="sci">
-<li><a href="https://www.facebook.com/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.instagram.com/danotorious_beats/" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li><!--fontawesome icon-->
+<li><a href="link-error.html-error.html" target="_blank"><i class="fa fa-instagram"></i></a></li><!--fontawesome icon-->
 <li><a href="https://www.youtube.com/channel/UCSXkqnImiOzch4LJPLHe1Pw" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#777"></i></a></li><!--fontawesome icon-->
 <li><a href="mailto:theevilgeniux@gmail.com" target="_top" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a></li><!--fontawesome icon-->
-<li><a href="https://www.linkedin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-linkedin"></i></a></li><!--fontawesome icon-->
+<li><a href="https://www.link-error.htmledin.com/in/evidence-maphutha-6766b9131/" target="_blank"><i class="fa fa-link-error.htmledin"></i></a></li><!--fontawesome icon-->
 
 </ul>
 <p class="cpryt">
