--- a/category-mobile-tech-support.html
+++ b/category-mobile-tech-support.html
@@ -68,7 +68,7 @@
 <img src="images/icons/mobile-cracked.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Tweaks<br><span><a href="category-mobile-tech-how-to-tricks-and-tips.html">Open <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<h3>Tweaks<br><span><a href="category-mobile-tech-how-to-tricks-and-tips.html">Tips & Tricks <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="20px" height="15px" viewBox="0 0 459 459" style="enable-background:new 0 0 459 459;" xml:space="preserve">
 <g><g id="tab"><path d="M408,0H51C22.95,0,0,22.95,0,51v357c0,28.05,22.95,51,51,51h357c28.05,0,51-22.95,51-51V51C459,22.95,436.05,0,408,0z
 			 M408,408H51V51h178.5v102H408V408z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
@@ -83,7 +83,7 @@
 <img src="images/icons/android-utilities.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>Utilities<br><span><a href="category-mobile-tech-support-utility-tools.html">Open <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<h3>Utilities<br><span><a href="category-mobile-tech-support-utility-tools.html">Download Center <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="20px" height="15px" viewBox="0 0 459 459" style="enable-background:new 0 0 459 459;" xml:space="preserve">
 <g><g id="tab"><path d="M408,0H51C22.95,0,0,22.95,0,51v357c0,28.05,22.95,51,51,51h357c28.05,0,51-22.95,51-51V51C459,22.95,436.05,0,408,0z
 			 M408,408H51V51h178.5v102H408V408z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
